unpackaged/main/default/objects/Video_View__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Video Views</relationshipLabel>
    <relationshipName>Video_Views</relationshipName>
    <type>Lookup</type>
</CustomField>