unpackaged/main/default/objects/Video_View__c/fields/Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Page_URL__c</fullName>
    <label>Page URL</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>