unpackaged/main/default/objects/Video_View__c/fields/Updated_At__c.field-meta.xml
<CustomField>
    <fullName>Updated_At__c</fullName>
    <label>Updated At</label>
    <type>Date</type>
</CustomField>